@@ -14,6 +14,7 @@ Ver.5.4 (in development)
 - Support the script parameters for FileMaker Server (controlled by 'parameter' key of 'script' key).
 - FileUploader can detect exceeding file size limit and returns valid error messages.
 - New Sample "Sample_API" is added. This is for explanation of server-side apis.
+- Add "CWPKit" in "lib" directory for FileMaker Server to remove a dependency of FX.php in the future.
 - [BUG FIX] Fix the issue of MediaAccess class and the file upload component when using the Native
   Authentication for mobile devices. The affected version is 5.3 only.
 - [BUG FIX] INTERMediatorOnPage.defaultBackgroundImage affects as expected.
